fix spacing on mobile

--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -2,23 +2,22 @@
 
 #contact {
   width: 100%;
-  // padding: 10px;
 }
 
 .contact__wrapper {
   background-color: $primary-color-light;
-  padding: 0 14px;
+  padding: 0 20px;
 }
 
 .contact__inner {
-  padding: 80px 0;
+  padding: 60px 0;
   max-width: $width-main;
   margin: auto;
 
   h1 {
     margin: 0;
     font-weight: 500;
-    font-size: 1.6em;
+    font-size: 1.7em;
   }
 
   a {
