--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,7 @@
 
 footer {
   width: 100%;
-  padding: 0 14px;
+  padding: 0 20px;
   background-color: $background-secondary;
   color: $text-primary;
   font-size: 14px;
