--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@ body {
 
 // global
 main {
-  padding-top: 120px;
+  padding-top: 80px;
 }
 
 h1,
@@ -90,7 +90,6 @@ p {
   width: 100%;
   height: 50px;
   position: fixed;
-  padding: 0 14px;
   top: 0;
   left: 0;
   z-index: 2;
@@ -104,7 +103,7 @@ p {
     margin: auto;
 
     .navigation__label {
-      padding: 0 12px;
+      padding: 0 20px;
       color: $text-primary;
       font-size: 1em;
       font-weight: 400;
@@ -127,6 +126,7 @@ p {
         height: 50px;
         width: 50px;
         padding: 12px;
+        margin-right: 8px;
         position: relative;
         cursor: pointer;
         -webkit-tap-highlight-color: transparent;
@@ -171,7 +171,8 @@ p {
       top: 100%;
       left: 0;
       width: 100%;
-      padding: 0 30px;
+      padding: 0 40px;
+      padding-bottom: 10px;
       background-color: $background-primary;
       list-style-type: none;
       transform: translateY(-100%);
@@ -238,9 +239,14 @@ p {
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 700px) {
+  main {
+    padding-top: 120px;
+  }
+
   #navigation {
     background-color: $background-primary;
+    padding: 0 14px;
     height: 60px;
 
     .navigation__inner {
@@ -280,7 +286,8 @@ p {
         li {
           opacity: 1;
           padding: 0;
-          margin: 0 10px;
+          margin: 0;
+          margin-left: 20px;
           font-size: 0.9em;
 
           a {
